# learnopengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  glad.c  main.cpp
.cache/clangd/index/: glad.c.94D1B76409F90A88.idx  glad.h.13BD34174291E74B.idx  khrplatform.h.2D48B774882D676B.idx  main.cpp.091B1D5139134D40.idx
include/glad/: glad.h
